# SwiftDawn

./: README.md
Daemon/: Cargo.toml
Daemon/src/: main.rs
Extension/: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
Extension/resources/: main.css  main.js
Extension/src/: extension.ts
