[package]
name = "ssh-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.65"
ezsockets = { version = "0.4.2", features = ["tungstenite"] }
gilrs = "0.10.1"
inputbot = "0.5.1"
tokio = { version = "1.26.0", features = ["full"] } 
tokio-tungstenite = "*"
